src/b/SpringMID/antlr/obpl/OBPLParser.java
// Generated from OBPL.g4 by ANTLR 4.0
package b.SpringMID.antlr.obpl;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class OBPLParser extends Parser {
	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		APP=1, IMPORT=2, BO=3, BP=4, EXTENDS=5, COLON=6, COLONCOLON=7, IF=8, ELSE=9, 
		END=10, PK=11, UK=12, DK=13, COMMA=14, FOR=15, BREAK=16, RETURN=17, LOOP=18, 
		DOT=19, ASSIGN=20, DEFAULT=21, NULL=22, EQ=23, LT=24, LE=25, GT=26, GE=27, 
		NE=28, OR=29, AND=30, NOT=31, ASK=32, ENUMBEGIN=33, ENUMEND=34, TUPLEBEGIN=35, 
		TUPLEEND=36, ADD=37, MINUS=38, MULTI=39, DIV=40, MOD=41, PARBEGIN=42, 
		PAREND=43, IS=44, EXISTS=45, NET=46, CHANNEL=47, CVT=48, EXT=49, PCK=50, 
		AS=51, MACRO=52, BROTHER=53, CHILD=54, ID=55, INT=56, FLOAT=57, COMMENT=58, 
		WS=59, EOL=60, STRING=61;
	public static final String[] tokenNames = {
		"<INVALID>", "'app'", "'import'", "'bo'", "'bp'", "'extends'", "':'", 
		"'::'", "'if'", "'else'", "'end'", "'pk'", "'uk'", "'dk'", "','", "'for'", 
		"'break'", "'return'", "'loop'", "'.'", "'='", "'default'", "'null'", 
		"'=='", "'<'", "'<='", "'>'", "'>='", "'!='", "'or'", "'and'", "'not'", 
		"'?'", "'['", "']'", "'{'", "'}'", "'+'", "'-'", "'*'", "'/'", "'%'", 
		"'('", "')'", "'is'", "'exists'", "'net'", "'channel'", "'ext'", "'cvt'", 
		"'pck'", "'as'", "'MACRO'", "'BROTHER'", "'CHILD'", "ID", "INT", "FLOAT", 
		"COMMENT", "WS", "EOL", "STRING"
	};
	public static final int
		RULE_compilationUnit = 0, RULE_packageDeclaration = 1, RULE_importDeclaration = 2, 
		RULE_typeDeclaration = 3, RULE_boDeclaration = 4, RULE_bpDeclaration = 5, 
		RULE_netDeclaration = 6, RULE_pckDeclaration = 7, RULE_pckRefed = 8, RULE_pckItemAttributes = 9, 
		RULE_itemAttribute = 10, RULE_boBody = 11, RULE_fieldDeclaration = 12, 
		RULE_keyDeclaration = 13, RULE_refDeclaration = 14, RULE_bpBody = 15, 
		RULE_statement = 16, RULE_caseStatement = 17, RULE_loopStatement = 18, 
		RULE_qualifiedName = 19, RULE_fieldDefinition1 = 20, RULE_fieldDefinition2 = 21, 
		RULE_fieldInfer = 22, RULE_expression = 23, RULE_idEnumeration = 24, RULE_boolExpression = 25, 
		RULE_orExpression = 26, RULE_andExpression = 27, RULE_notExpression = 28, 
		RULE_compareExpression = 29, RULE_compareOp = 30, RULE_additiveExpression = 31, 
		RULE_additiveOp = 32, RULE_multiplicativeExpression = 33, RULE_multiplicativeOp = 34, 
		RULE_unaryExpression = 35, RULE_primary = 36, RULE_idAbsPath = 37, RULE_idWithIdentifier = 38, 
		RULE_identifierSuffix = 39, RULE_arguments = 40, RULE_expressionList = 41, 
		RULE_expressionWithAssign = 42, RULE_literal = 43;
	public static final String[] ruleNames = {
		"compilationUnit", "packageDeclaration", "importDeclaration", "typeDeclaration", 
		"boDeclaration", "bpDeclaration", "netDeclaration", "pckDeclaration", 
		"pckRefed", "pckItemAttributes", "itemAttribute", "boBody", "fieldDeclaration", 
		"keyDeclaration", "refDeclaration", "bpBody", "statement", "caseStatement", 
		"loopStatement", "qualifiedName", "fieldDefinition1", "fieldDefinition2", 
		"fieldInfer", "expression", "idEnumeration", "boolExpression", "orExpression", 
		"andExpression", "notExpression", "compareExpression", "compareOp", "additiveExpression", 
		"additiveOp", "multiplicativeExpression", "multiplicativeOp", "unaryExpression", 
		"primary", "idAbsPath", "idWithIdentifier", "identifierSuffix", "arguments", 
		"expressionList", "expressionWithAssign", "literal"
	};

	@Override
	public String getGrammarFileName() { return "OBPL.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public ATN getATN() { return _ATN; }

	public OBPLParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class CompilationUnitContext extends ParserRuleContext {
		public PackageDeclarationContext packageDeclaration() {
			return getRuleContext(PackageDeclarationContext.class,0);
		}
		public List<TerminalNode> EOL() { return getTokens(OBPLParser.EOL); }
		public ImportDeclarationContext importDeclaration(int i) {
			return getRuleContext(ImportDeclarationContext.class,i);
		}
		public TerminalNode EOF() { return getToken(OBPLParser.EOF, 0); }
		public List<TypeDeclarationContext> typeDeclaration() {
			return getRuleContexts(TypeDeclarationContext.class);
		}
		public List<ImportDeclarationContext> importDeclaration() {
			return getRuleContexts(ImportDeclarationContext.class);
		}
		public TerminalNode EOL(int i) {
			return getToken(OBPLParser.EOL, i);
		}
		public TypeDeclarationContext typeDeclaration(int i) {
			return getRuleContext(TypeDeclarationContext.class,i);
		}
		public CompilationUnitContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_compilationUnit; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof OBPLListener ) ((OBPLListener)listener).enterCompilationUnit(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof OBPLListener ) ((OBPLListener)listener).exitCompilationUnit(this);
		}
	}

	public final CompilationUnitContext compilationUnit() throws RecognitionException {
		CompilationUnitContext _localctx = new CompilationUnitContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_compilationUnit);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(91);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==EOL) {
				{
				{
				setState(88); match(EOL);
				}
				}
				setState(93);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(94); packageDeclaration();
			setState(98);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==IMPORT || _la==EOL) {
				{
				{
				setState(95); importDeclaration();
				}
				}
				setState(100);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(102); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(101); typeDeclaration();
				}
				}
				setState(104); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << BO) | (1L << BP) | (1L << NET) | (1L << CHANNEL) | (1L << CVT) | (1L << EXT) | (1L << PCK))) != 0) );
			setState(106); match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PackageDeclarationContext extends ParserRuleContext {
		public TerminalNode APP() { return getToken(OBPLParser.APP, 0); }
		public TerminalNode EOL() { return getToken(OBPLParser.EOL, 0); }
		public QualifiedNameContext qualifiedName() {
			return getRuleContext(QualifiedNameContext.class,0);
		}
		public PackageDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_packageDeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof OBPLListener ) ((OBPLListener)listener).enterPackageDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof OBPLListener ) ((OBPLListener)listener).exitPackageDeclaration(this);
		}
	}

	public final PackageDeclarationContext packageDeclaration() throws RecognitionException {
		PackageDeclarationContext _localctx = new PackageDeclarationContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_packageDeclaration);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(108); match(APP);
			setState(109); qualifiedName();
			setState(110); match(EOL);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ImportDeclarationContext extends ParserRuleContext {
		public TerminalNode IMPORT() { return getToken(OBPLParser.IMPORT, 0); }
		public TerminalNode EOL() { return getToken(OBPLParser.EOL, 0); }
		public QualifiedNameContext qualifiedName() {
			return getRuleContext(QualifiedNameContext.class,0);
		}
		public ImportDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_importDeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof OBPLListener ) ((OBPLListener)listener).enterImportDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof OBPLListener ) ((OBPLListener)listener).exitImportDeclaration(this);
		}
	}

	public final ImportDeclarationContext importDeclaration() throws RecognitionException {
		ImportDeclarationContext _localctx = new ImportDeclarationContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_importDeclaration);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(114);
			_la = _input.LA(1);
			if (_la==IMPORT) {
				{
				setState(112); match(IMPORT);
				setState(113); qualifiedName();
				}
			}

			setState(116); match(EOL);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypeDeclarationContext extends ParserRuleContext {
		public BpDeclarationContext bpDeclaration() {
			return getRuleContext(BpDeclarationContext.class,0);
		}
		public BoDeclarationContext boDeclaration() {
			return getRuleContext(BoDeclarationContext.class,0);
		}
		public PckDeclarationContext pckDeclaration() {
			return getRuleContext(PckDeclarationContext.class,0);
		}
		public NetDeclarationContext netDeclaration() {
			return getRuleContext(NetDeclarationContext.class,0);
		}
		public TypeDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_typeDeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof OBPLListener ) ((OBPLListener)listener).enterTypeDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof OBPLListener ) ((OBPLListener)listener).exitTypeDeclaration(this);
		}
	}

	public final TypeDeclarationContext typeDeclaration() throws RecognitionException {
		TypeDeclarationContext _localctx = new TypeDeclarationContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_typeDeclaration);
		try {
			setState(122);
			switch (_input.LA(1)) {
			case BO:
				enterOuterAlt(_localctx, 1);
				{
				setState(118); boDeclaration();
				}
				break;
			case BP:
				enterOuterAlt(_localctx, 2);
				{
				setState(119); bpDeclaration();
				}
				break;
			case NET:
			case CHANNEL:
			case CVT:
			case EXT:
				enterOuterAlt(_localctx, 3);
				{
				setState(120); netDeclaration();
				}
				break;
			case PCK:
				enterOuterAlt(_localctx, 4);
				{
				setState(121); pckDeclaration();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BoDeclarationContext extends ParserRuleContext {
		public TerminalNode ID(int i) {
			return getToken(OBPLParser.ID, i);
		}
		public List<TerminalNode> EOL() { return getTokens(OBPLParser.EOL); }
		public TerminalNode END() { return getToken(OBPLParser.END, 0); }
		public List<TerminalNode> ID() { return getTokens(OBPLParser.ID); }
		public TerminalNode BO() { return getToken(OBPLParser.BO, 0); }
		public TerminalNode EXTENDS() { return getToken(OBPLParser.EXTENDS, 0); }
		public BoBodyContext boBody() {
			return getRuleContext(BoBodyContext.class,0);
		}
		public TerminalNode EOL(int i) {
			return getToken(OBPLParser.EOL, i);
		}
		public BoDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_boDeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof OBPLListener ) ((OBPLListener)listener).enterBoDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof OBPLListener ) ((OBPLListener)listener).exitBoDeclaration(this);
		}
	}

	public final BoDeclarationContext boDeclaration() throws RecognitionException {
		BoDeclarationContext _localctx = new BoDeclarationContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_boDeclaration);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(124); match(BO);
			setState(125); match(ID);
			setState(128);
			_la = _input.LA(1);
			if (_la==EXTENDS) {
				{
				setState(126); match(EXTENDS);
				setState(127); match(ID);
				}
			}

			setState(131); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(130); match(EOL);
				}
				}
				setState(133); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==EOL );
			setState(135); boBody();
			setState(136); match(END);
			setState(138); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(137); match(EOL);
				}
				}
				setState(140); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==EOL );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BpDeclarationContext extends ParserRuleContext {
		public TerminalNode COLONCOLON() { return getToken(OBPLParser.COLONCOLON, 0); }
		public TerminalNode ID(int i) {
			return getToken(OBPLParser.ID, i);
		}
		public List<TerminalNode> EOL() { return getTokens(OBPLParser.EOL); }
		public TerminalNode END() { return getToken(OBPLParser.END, 0); }
		public List<TerminalNode> ID() { return getTokens(OBPLParser.ID); }
		public TerminalNode BP() { return getToken(OBPLParser.BP, 0); }
		public TerminalNode EOL(int i) {
			return getToken(OBPLParser.EOL, i);
		}
		public BpBodyContext bpBody() {
			return getRuleContext(BpBodyContext.class,0);
		}
		public BpDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_bpDeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof OBPLListener ) ((OBPLListener)listener).enterBpDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof OBPLListener ) ((OBPLListener)listener).exitBpDeclaration(this);
		}
	}

	public final BpDeclarationContext bpDeclaration() throws RecognitionException {
		BpDeclarationContext _localctx = new BpDeclarationContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_bpDeclaration);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(142); match(BP);
			setState(143); match(ID);
			setState(146);
			_la = _input.LA(1);
			if (_la==COLONCOLON) {
				{
				setState(144); match(COLONCOLON);
				setState(145); match(ID);
				}
			}

			setState(149); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(148); match(EOL);
				}
				}
				setState(151); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==EOL );
			setState(153); bpBody();
			setState(154); match(END);
			setState(156); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(155); match(EOL);
				}
				}
				setState(158); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==EOL );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NetDeclarationContext extends ParserRuleContext {
		public TerminalNode NET() { return getToken(OBPLParser.NET, 0); }
		public TerminalNode ID(int i) {
			return getToken(OBPLParser.ID, i);
		}
		public List<TerminalNode> EOL() { return getTokens(OBPLParser.EOL); }
		public QualifiedNameContext qualifiedName() {
			return getRuleContext(QualifiedNameContext.class,0);
		}
		public TerminalNode EXT() { return getToken(OBPLParser.EXT, 0); }
		public TerminalNode ASSIGN(int i) {
			return getToken(OBPLParser.ASSIGN, i);
		}
		public List<TerminalNode> ASSIGN() { return getTokens(OBPLParser.ASSIGN); }
		public TerminalNode CHANNEL() { return getToken(OBPLParser.CHANNEL, 0); }
		public List<BoolExpressionContext> boolExpression() {
			return getRuleContexts(BoolExpressionContext.class);
		}
		public BoolExpressionContext boolExpression(int i) {
			return getRuleContext(BoolExpressionContext.class,i);
		}
		public TerminalNode END() { return getToken(OBPLParser.END, 0); }
		public TerminalNode CVT() { return getToken(OBPLParser.CVT, 0); }
		public List<TerminalNode> ID() { return getTokens(OBPLParser.ID); }
		public TerminalNode EOL(int i) {
			return getToken(OBPLParser.EOL, i);
		}
		public NetDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_netDeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof OBPLListener ) ((OBPLListener)listener).enterNetDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof OBPLListener ) ((OBPLListener)listener).exitNetDeclaration(this);
		}
	}

	public final NetDeclarationContext netDeclaration() throws RecognitionException {
		NetDeclarationContext _localctx = new NetDeclarationContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_netDeclaration);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(160);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << NET) | (1L << CHANNEL) | (1L << CVT) | (1L << EXT))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			consume();
			setState(161); qualifiedName();
			setState(163); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(162); match(EOL);
				}
				}
				setState(165); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==EOL );
			setState(177);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==ID) {
				{
				{
				setState(167); match(ID);
				setState(168); match(ASSIGN);
				setState(169); boolExpression();
				setState(171); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(170); match(EOL);
					}
					}
					setState(173); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==EOL );
				}
				}
				setState(179);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(180); match(END);
			setState(182); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(181); match(EOL);
				}
				}
				setState(184); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==EOL );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PckDeclarationContext extends ParserRuleContext {
		public List<TerminalNode> COLON() { return getTokens(OBPLParser.COLON); }
		public TerminalNode ID(int i) {
			return getToken(OBPLParser.ID, i);
		}
		public List<TerminalNode> EOL() { return getTokens(OBPLParser.EOL); }
		public PckItemAttributesContext pckItemAttributes(int i) {
			return getRuleContext(PckItemAttributesContext.class,i);
		}
		public QualifiedNameContext qualifiedName() {
			return getRuleContext(QualifiedNameContext.class,0);
		}
		public TerminalNode PCK() { return getToken(OBPLParser.PCK, 0); }
		public TerminalNode ASSIGN(int i) {
			return getToken(OBPLParser.ASSIGN, i);
		}
		public List<PckItemAttributesContext> pckItemAttributes() {
			return getRuleContexts(PckItemAttributesContext.class);
		}
		public List<PckRefedContext> pckRefed() {
			return getRuleContexts(PckRefedContext.class);
		}
		public List<TerminalNode> ASSIGN() { return getTokens(OBPLParser.ASSIGN); }
		public List<BoolExpressionContext> boolExpression() {
			return getRuleContexts(BoolExpressionContext.class);
		}
		public PckRefedContext pckRefed(int i) {
			return getRuleContext(PckRefedContext.class,i);
		}
		public BoolExpressionContext boolExpression(int i) {
			return getRuleContext(BoolExpressionContext.class,i);
		}
		public TerminalNode END() { return getToken(OBPLParser.END, 0); }
		public List<TerminalNode> ID() { return getTokens(OBPLParser.ID); }
		public TerminalNode COLON(int i) {
			return getToken(OBPLParser.COLON, i);
		}
		public TerminalNode EOL(int i) {
			return getToken(OBPLParser.EOL, i);
		}
		public PckDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_pckDeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof OBPLListener ) ((OBPLListener)listener).enterPckDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof OBPLListener ) ((OBPLListener)listener).exitPckDeclaration(this);
		}
	}

	public final PckDeclarationContext pckDeclaration() throws RecognitionException {
		PckDeclarationContext _localctx = new PckDeclarationContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_pckDeclaration);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(186); match(PCK);
			setState(187); qualifiedName();
			setState(189); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(188); match(EOL);
				}
				}
				setState(191); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==EOL );
			setState(203);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,17,_ctx);
			while ( _alt!=2 && _alt!=-1 ) {
				if ( _alt==1 ) {
					{
					{
					setState(193); match(ID);
					setState(194); match(ASSIGN);
					setState(195); boolExpression();
					setState(197); 
					_errHandler.sync(this);
					_la = _input.LA(1);
					do {
						{
						{
						setState(196); match(EOL);
						}
						}
						setState(199); 
						_errHandler.sync(this);
						_la = _input.LA(1);
					} while ( _la==EOL );
					}
					} 
				}
				setState(205);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,17,_ctx);
			}
			setState(225);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==ID) {
				{
				{
				setState(206); match(ID);
				setState(207); match(COLON);
				setState(209);
				_la = _input.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << NOT) | (1L << TUPLEBEGIN) | (1L << MINUS) | (1L << PARBEGIN) | (1L << EXISTS) | (1L << ID) | (1L << INT) | (1L << FLOAT) | (1L << STRING))) != 0)) {
					{
					setState(208); pckRefed();
					}
				}

				setState(212);
				_la = _input.LA(1);
				if (_la==ENUMBEGIN) {
					{
					setState(211); pckItemAttributes();
					}
				}

				setState(216);
				_la = _input.LA(1);
				if (_la==ASSIGN) {
					{
					setState(214); match(ASSIGN);
					setState(215); boolExpression();
					}
				}
